--- a/src/test/resources/corner/widget/querybox_page2.html
+++ b/src/test/resources/corner/widget/querybox_page2.html
@@ -11,12 +11,15 @@ djConfig = { isDebug: true,
                parseWidgets: false
           };
 
+function autofitThis(){
+	dojo.debug("auto fit this");
+}
 //-->
 </SCRIPT>
 <SCRIPT LANGUAGE="JavaScript" src="../../../../main/js/dojo/dojo.js"></script>
 <SCRIPT LANGUAGE="JavaScript" src="../../../../main/js/corner/corner.js"></script>
 
-<body >
+<body onLoad="autofitThis()">
 <div  style="width:532px">
 	<table >
 		<tr><td>asdfasdfasd fasdfasdfasdfasdf asdfasdfasdfasdfasdfasdfasdfasdfasdfasdfasdfasdf我们</td><td>asdf wo </td></tr>
