--- a/src/test/resources/corner/widget/test_Dialog.html
+++ b/src/test/resources/corner/widget/test_Dialog.html
@@ -3,7 +3,7 @@
 <title>Dialog Widget Dojo Tests</title>
 <script type="text/javascript"> djConfig = { isDebug: true }; </script>
 <SCRIPT LANGUAGE="JavaScript" src="../../../../main/js/dojo/dojo.js"></script>
-	<script type="text/javascript">
+<script type="text/javascript">
 	dojo.require("dojo.widget.Dialog");
 
 </script>
@@ -51,13 +51,7 @@ body { font-family : sans-serif; }
 form {
 	margin-bottom : 0;
 }
-div#DialogContent { overflow: hidden; }
-div#iframe_container {
-width:318px;
-height:100px;
-overflow-x:hidden;
-overflow-y:scroll;
-}
+
 </style>
 	
 </head>
@@ -73,5 +67,21 @@ overflow-y:scroll;
 	
 	<br/>
 </div>
+<select>
+	<option>Lorem</option>
+	<option>ipsum</option>
+	<option>dolor</option>
+	<option>sit</option>
+	<option>amet</option>
+</select>
+
+<p>
+Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean
+semper sagittis velit. Cras in mi. Duis porta mauris ut ligula. Proin
+porta rutrum lacus. Etiam consequat scelerisque quam. Nulla facilisi.
+Maecenas luctus venenatis nulla. In sit amet dui non mi semper iaculis.
+Sed molestie tortor at ipsum. Morbi dictum rutrum magna. Sed vitae
+risus.
+</p>
 </body>
 </html>
