--- a/src/test/resources/corner/widget/querybox_page2.html
+++ b/src/test/resources/corner/widget/querybox_page2.html
@@ -12,14 +12,14 @@ djConfig = { isDebug: true,
           };
 
 function autofitThis(){
-	dojo.debug("auto fit this");
+	parent.dojo.debug("auto fit this");
 }
 //-->
 </SCRIPT>
 <SCRIPT LANGUAGE="JavaScript" src="../../../../main/js/dojo/dojo.js"></script>
 <SCRIPT LANGUAGE="JavaScript" src="../../../../main/js/corner/corner.js"></script>
 
-<body onLoad="autofitThis()">
+<body onload="autofitThis()">
 <div  style="width:532px">
 	<table >
 		<tr><td>asdfasdfasd fasdfasdfasdfasdf asdfasdfasdfasdfasdfasdfasdfasdfasdfasdfasdfasdf我们</td><td>asdf wo </td></tr>
