add width and height parameter for widget
git-svn-id: http://dev.bjmaxinfo.com/svn/corner/trunk/corner@2501 bda6c913-8cf9-0310-89cc-b5856a464ced

--- a/src/test/resources/corner/widget/querybox_page2.html
+++ b/src/test/resources/corner/widget/querybox_page2.html
@@ -13,6 +13,9 @@ djConfig = { isDebug: true,
 
 function autofitThis(){
 	parent.dojo.debug("auto fit this");
+dojo.debug("call form this");
+dojo.debug("width"+this.document.body.scrollWidth);
+
 }
 //-->
 </SCRIPT>
