初步完成对queryDialog，并增加了测试页面
git-svn-id: http://dev.bjmaxinfo.com/svn/corner/trunk/corner@2514 bda6c913-8cf9-0310-89cc-b5856a464ced

--- a/src/main/webapp/Home.html
+++ b/src/main/webapp/Home.html
@@ -12,5 +12,10 @@
 		<a jwcid="@PageLink" page="validator/FieldMinForm"><span key="FieldMin" /></a><br>
 		<a jwcid="@PageLink" page="validator/FieldPlusEqForm"><span key="FieldPlusEqForm" /></a><br>
 		<a jwcid="@PageLink" page="upload/APersonForm"><span key="uploadBox" /></a><br>
+			
+		<hr/>
+			Widget
+		<a jwcid="@PageLink" page="widget/QueryDialogTest"><span key="QueryDialog" /></a><br>
+			
     </body>
 </html>
