--- a/src/main/webapp/widget/SelectionListPage.html
+++ b/src/main/webapp/widget/SelectionListPage.html
@@ -1,6 +1,6 @@
 <span jwcid="@DemoBorder">
 <br/>
-	<form action="?testf=asdf">
+	<form action="http://dev.bjmaxinfo.com">
 		<input type="text">
 
 		<input type="submit"/>
