增加了corner:DropdownDatePicker组件,实现保存日期为一个String类型 并在测试页面增加了使用样例
git-svn-id: http://dev.bjmaxinfo.com/svn/corner/trunk/corner@2568 bda6c913-8cf9-0310-89cc-b5856a464ced

--- a/src/main/webapp/one/AForm.html
+++ b/src/main/webapp/one/AForm.html
@@ -9,6 +9,7 @@
           <td>
             <input jwcid="nameField" /><input jwcid="passwordField"/>colors:<input jwcid="colorsField"/>
           </td>
+		  <td><input jwcid="birthdayField"/></td>
         </tr>
       </table>
       <input jwcid="@Submit" type="Submit" value="message:button.Okay"/>
