增加了DropdownTimePicker组件的使用样例
git-svn-id: http://dev.bjmaxinfo.com/svn/corner/trunk/corner@2569 bda6c913-8cf9-0310-89cc-b5856a464ced

--- a/src/main/webapp/one/AForm.html
+++ b/src/main/webapp/one/AForm.html
@@ -10,6 +10,7 @@
             <input jwcid="nameField" /><input jwcid="passwordField"/>colors:<input jwcid="colorsField"/>
           </td>
 		  <td><input jwcid="birthdayField"/></td>
+		  <td><input jwcid="parkTimeField"/></td>
         </tr>
       </table>
       <input jwcid="@Submit" type="Submit" value="message:button.Okay"/>
