--- a/src/main/webapp/one/DatePickerList.html
+++ b/src/main/webapp/one/DatePickerList.html
@@ -23,6 +23,9 @@
             <span key="colors">colors</span>
           </td>
           <td>
+            <span key="bornDate">colors</span>
+          </td>
+          <td>
             <span key="link.edit">edit</span>
           </td>
           <td>
@@ -38,6 +41,9 @@
           </td>
           <td>
             <span jwcid="@Insert" value="ognl:entity.colors">colors</span>
+          </td>
+          <td>
+            <span jwcid="@Insert" value="ognl:entity.bornDate">bornDate</span>
           </td>
           <td>
             <a parameters="ognl:entity" listener="listener:doEditEntityAction" jwcid="@DirectLink" href="AForm.html" id="editAction">
