增加了自动填充当前日期的功能
git-svn-id: http://dev.bjmaxinfo.com/svn/corner/trunk/corner@2572 bda6c913-8cf9-0310-89cc-b5856a464ced

--- a/src/main/webapp/one/DatePickerForm.html
+++ b/src/main/webapp/one/DatePickerForm.html
@@ -35,7 +35,7 @@
           </td>
         </tr>
 		  <tr>
-	  		  <td colspan="2"><input class="input-form-ajax-99" jwcid="bornDateField"/></td>
+	  		  <td colspan="2"><input class="input-form-ajax-99" readonly="true" jwcid="bornDateField"/></td>
 		  </tr>
       </table>
       <input jwcid="@Submit" type="Submit" value="message:button.Okay"/>
