增加了DropdownDatePicker组件styleCopy的能力,增加了测试页面(IE下有问题 ,疑是包引用的问题，待解决ing...)
git-svn-id: http://dev.bjmaxinfo.com/svn/corner/trunk/corner@2573 bda6c913-8cf9-0310-89cc-b5856a464ced

--- a/src/main/webapp/one/DropdownDatePickerList.html
+++ b/src/main/webapp/one/DropdownDatePickerList.html
@@ -23,7 +23,7 @@
             <span key="colors">colors</span>
           </td>
           <td>
-            <span key="bornDate">bornDate</span>
+            <span key="bornDate">birthday</span>
           </td>
           <td>
             <span key="link.edit">edit</span>
@@ -43,7 +43,7 @@
             <span jwcid="@Insert" value="ognl:entity.colors">colors</span>
           </td>
           <td>
-            <span jwcid="@Insert" value="ognl:entity.bornDate">bornDate</span>
+            <span jwcid="@Insert" value="ognl:entity.birthday">bornDate</span>
           </td>
           <td>
             <a parameters="ognl:entity" listener="listener:doEditEntityAction" jwcid="@DirectLink" href="AForm.html" id="editAction">
