--- a/src/test/resources/corner/widget/test_click_show1.html
+++ b/src/test/resources/corner/widget/test_click_show1.html
@@ -17,16 +17,39 @@ djConfig = { isDebug: true
 </head>
 
 <body>
-<form id="form1" name="form1" method="post" action="">
-  
-  <input type="button" name="Submit" value="提交" onclick="aaa()" />
-  <table id="test">
-	  <tr>
-		  <td>fdsa</td>
-	  </tr>
-  </table>
-</form>
-<script language="javascript1.5" src="show1.js" />
+<table id='myTable' border=1>
+<tr flag="old" onMouseOver="moveOver()" onMouseOut="moveOut()">
+<td>AAA</td>
+<td>BBB</td>
+<td>CCC</td>
+</tr>
+</table>
+<input type="button" value="add row" onClick="foo()">
+<script>
+function foo(){
+	
+	var oTr = dojo.byId('myTable').firstChild.firstChild.cloneNode(true);
+	oTr.flag = "new";
+	myTable.firstChild.appendChild(oTr);
+}
+function moveOver(){
+	var oTr = event.srcElement;
+	while(oTr.tagName != "TR"){
+		oTr = oTr.parentElement;
+	}
+	if(oTr.flag == "new")
+		oTr.style.backgroundColor='blue';
+}
+function moveOut(){
+	var oTr = event.srcElement;
+	while(oTr.tagName != "TR"){
+		oTr = oTr.parentElement;
+	}
+	if(oTr.flag == "new")
+		oTr.style.backgroundColor='';
+}
+</script>
+
 	
 </body>
 
