--- a/src/main/java/corner/orm/tapestry/table/TablePages.html
+++ b/src/main/java/corner/orm/tapestry/table/TablePages.html
@@ -16,7 +16,7 @@
 <li jwcid="@Any" class="ognl:lastLinkClass"><a jwcid="linkFwd">&gt;</a></li>
 <li jwcid="@Any" class="ognl:lastLinkClass"><a jwcid="linkLast">&gt;&gt;</a></li>
 <li>&nbsp;<form jwcid="queryPageForm"><div style="display:none"><input jwcid="@TextField"  defaultValue="ognl:getDefaultComponentAddress()" value="ognl:componentAddress"/></div><input jwcid="PageNumField"/>&nbsp;<input type="submit"  class="pagesubmit" value="GO"/></form></li>
-<li>共<span jwcid="@Insert" value="ognl:rowCount"/>条</li>
+<li><span jwcid="@Insert" value="ognl:getRowCountMessage()"/></li>
 </ul>
 </div>
 </span>
