--- a/src/main/java/corner/orm/tapestry/table/TablePages.html
+++ b/src/main/java/corner/orm/tapestry/table/TablePages.html
@@ -14,7 +14,7 @@
 	</span>
 </span>
 <li jwcid="@Any" class="ognl:lastLinkClass"><a jwcid="linkFwd">&gt;</a></li>
-<li jwcid="@Any" class="ognl:lastLinkClass"><a jwcid="linkLast"><span jwcid="@Insert" value="ognl:getPageCount()"/></a></a></li>
+<li jwcid="@Any" class="ognl:lastLinkClass"><a jwcid="linkLast"><span jwcid="@Insert" value="ognl:getPageCount()"/></a></li>
 <li>&nbsp;<form jwcid="queryPageForm"><div style="display:none"><input jwcid="@TextField"  defaultValue="ognl:getDefaultComponentAddress()" value="ognl:componentAddress"/></div><input jwcid="PageNumField"/>&nbsp;<input type="submit"  class="pagesubmit" value="GO"/></form></li>
 <li><span jwcid="@Insert" value="ognl:getRowCountMessage()"/></li>
 </ul>
