--- a/src/main/webapp/html_tests/TestSuite.html
+++ b/src/main/webapp/html_tests/TestSuite.html
@@ -18,7 +18,7 @@ Copyright 2004 ThoughtWorks, Inc
 <meta content="text/html; charset=ISO-8859-1"
 http-equiv="content-type">
 <title>Test Suite</title>
-<script language="JavaScript" type="text/javascript" src="scripts/selenium-browserdetect.js"></script>
+<script language="JavaScript" type="text/javascript" src="../selenium-server/core/scripts/selenium-browserdetect.js"></script>
 <script language="JavaScript" type="text/javascript">
     function filterTestsForBrowser() {
         var suiteTable = document.getElementById("suiteTable");
