增加对dataSquezzer在ASO中的调用
git-svn-id: http://dev.bjmaxinfo.com/svn/corner/trunk/corner@2842 bda6c913-8cf9-0310-89cc-b5856a464ced

--- a/src/main/webapp/one/AForm.html
+++ b/src/main/webapp/one/AForm.html
@@ -14,4 +14,5 @@
       <input jwcid="@Submit" type="Submit" value="message:button.Okay"/>
       <input jwcid="@Any" type="Button" value="message:button.Cancle" onClick="javascript:tapestry.form.cancel(this.form);"/>
     </form>
+	<span jwcid="@Insert" value="ognl:context"/>
 </span>
