增加GainPoint组建，完成展示和修改name
git-svn-id: http://dev.bjmaxinfo.com/svn/corner/trunk/corner@2941 bda6c913-8cf9-0310-89cc-b5856a464ced

--- a/src/main/webapp/Home.html
+++ b/src/main/webapp/Home.html
@@ -16,6 +16,10 @@
 		<hr/>
 			Widget
 		<a jwcid="@PageLink" page="widget/QueryDialogTest"><span key="QueryDialog" /></a><br>
+		
+		<hr/>
+			GainPoint
+		<a jwcid="@PageLink" page="gainPoint/AList"><span key="GainPoint" /></a><br>
 			
     </body>
 </html>
