--- a/src/test/resources/corner/gain/test_gainPoint.html
+++ b/src/test/resources/corner/gain/test_gainPoint.html
@@ -34,7 +34,7 @@ function reName(){
 </SCRIPT>
 <SCRIPT LANGUAGE="JavaScript" src="../../../../main/js/dojo/dojo.js"></script>
 <SCRIPT LANGUAGE="JavaScript" src="../../../../main/js/corner/corner.js"></script>
-<SCRIPT LANGUAGE="JavaScript" src="test_gainPoint.js"></script>
+<SCRIPT LANGUAGE="JavaScript" src="GainPoint.js"></script>
 </head>
 
 <body>
