--- a/src/main/webapp/gainPoint/AForm.html
+++ b/src/main/webapp/gainPoint/AForm.html
@@ -19,7 +19,9 @@
     <div jwcid="@contrib:TableView" element="span" columns="name,cnName,!DeleteRelative"
      source="ognl:getSource('bs')" pageSize="5" persist="client">
    <fieldset>
-   <legend>A-B one-to-many,A关联的B列表 <a parameters="ognl:{entity,'gainPoint/gainPointForm'}" listener="listener:doNewRelativeAction" jwcid="@DirectLink" href="gainPointForm.html">Add A to B</a></legend> 
+   <legend>A-B one-to-many,A关联的B列表 <a parameters="ognl:{entity,'gainPoint/gainPointForm'}" listener="listener:doNewRelativeAction" jwcid="@DirectLink" href="gainPointForm.html">Add A to B</a>
+   <a parameters="ognl:{entity}" listener="listener:doEditEntityAction" jwcid="@DirectLink" href="gainPointForm.html">Edit A to B</a>
+   </legend> 
    
 	<table width="100%" align="center" border="1">
 		<tr>
