gp不复制hidden的value。为删除做准备
git-svn-id: http://dev.bjmaxinfo.com/svn/corner/trunk/corner@2955 bda6c913-8cf9-0310-89cc-b5856a464ced

--- a/src/main/webapp/gainPoint/gainPointForm.html
+++ b/src/main/webapp/gainPoint/gainPointForm.html
@@ -6,29 +6,19 @@
 		 
 		<tr>
 			<td>
-				
+				<div jwcid="GainPointIdField@corner:GainPoint" elementName="id">
+				id <input type="hidden" id="id" name ="id" value=""	/>
+			    </div>
 			</td>
 			<td>
 				<div jwcid="GainPointField@corner:GainPoint" elementName="name">
-				<table id ="t1">
-					<tr>
-						<td>
-							name <input id="field1" name ="name"	/>
-							</td>
-					</tr>
-				</table>
+				name <input type="text" id="field1" name ="name"	/>
 			    </div>
 			</td>
 			<td>
 				<div jwcid="GainPointaaField@corner:GainPoint" elementName="cnName">
-				<table id ="t1">
-					<tr>
-						<td>
-							cnName <input id="field2" name ="cnName"	/>
-						<td>
-					</tr>
-				</table>
-					</div>
+				cnName <input type="text" id="field2" name ="cnName"	/>
+				</div>
 			</td>
 			<td>
 				<input type="button" id="testAdd" value="删除" onclick="dellRow('t',this.parentNode.parentNode.rowIndex)"/>
