--- a/src/test/resources/corner/gain/test_gainPoint.html
+++ b/src/test/resources/corner/gain/test_gainPoint.html
@@ -52,7 +52,7 @@ function reElementValues(){
 		<tr>
 			<td>
 				<div jwcid="GainPointIdField" elementName="id">
-				id <input type="hidden" id="id" name ="id" value="fjkdsajfldsu4o329048347832012j4kl48"	/>
+				id <input type="hidden" id="id" name ="Gain_Point_id" value="fjkdsajfldsu4o329048347832012j4kl48"	/>
 			    </div>
 			</td>
 			<td>
