解决gp隐藏框id写死问题
git-svn-id: http://dev.bjmaxinfo.com/svn/corner/trunk/corner@2957 bda6c913-8cf9-0310-89cc-b5856a464ced

--- a/src/test/resources/corner/gain/test_gainPoint.html
+++ b/src/test/resources/corner/gain/test_gainPoint.html
@@ -4,6 +4,7 @@
 <head>
 <title>test gainPoint</title>
 <meta http-equiv="Content-Type" content="text/html;charset=UTF-8"/>
+	<SCRIPT LANGUAGE="JavaScript" src="GainPoint.js"></script>
 <SCRIPT LANGUAGE="JavaScript">
 <!--
 
@@ -13,6 +14,8 @@ djConfig = { isDebug: true
 //-->
 
 <!--
+	 
+	
 function reElementValues(){
 	
 	dojo.debug("fkdlsajfkldjsakfjdkls");
@@ -39,7 +42,14 @@ function reElementValues(){
 </SCRIPT>
 <SCRIPT LANGUAGE="JavaScript" src="../../../../main/js/dojo/dojo.js"></script>
 <SCRIPT LANGUAGE="JavaScript" src="../../../../main/js/corner/corner.js"></script>
-<SCRIPT LANGUAGE="JavaScript" src="GainPoint.js"></script>
+
+	<SCRIPT LANGUAGE="JavaScript">
+<!--
+	function getPersistentId(){
+			return 'iid';
+		}
+	//-->
+</SCRIPT>
 </head>
 
 <body>
@@ -51,8 +61,8 @@ function reElementValues(){
 		  <tbody>
 		<tr>
 			<td>
-				<div jwcid="GainPointIdField" elementName="id">
-				id <input type="hidden" id="id" name ="Gain_Point_id" value="fjkdsajfldsu4o329048347832012j4kl48"	/>
+				<div jwcid="GainPointIdField" elementName="iid">
+				id <input type="hidden" id="id" name ="iid" value="fjkdsajfldsu4o329048347832012j4kl48"	/>
 			    </div>
 			</td>
 			<td>
