将gp功能融入gf上
git-svn-id: http://dev.bjmaxinfo.com/svn/corner/trunk/corner@2962 bda6c913-8cf9-0310-89cc-b5856a464ced

--- a/src/main/webapp/gainPoint/gainPointForm.html
+++ b/src/main/webapp/gainPoint/gainPointForm.html
@@ -4,27 +4,20 @@
 		name <a href=# onclick="addRow('t')">add</a><br/>
       <table id="t">
 		 
-		<tr>
+		<tr jwcid="GainFenceField">
 			<td>
-				<div jwcid="GainPointIdField@corner:GainPoint" elementName="id">
 				id <input type="hidden" id="id" name ="id" value=""	/>
-			    </div>
 			</td>
 			<td>
-				<div jwcid="GainPointField@corner:GainPoint" elementName="name">
 				name <input type="text" id="field1" name ="name"	/>
-			    </div>
 			</td>
 			<td>
-				<div jwcid="GainPointaaField@corner:GainPoint" elementName="cnName">
 				cnName <input type="text" id="field2" name ="cnName"	/>
-				</div>
 			</td>
 			<td>
 				<input type="button" id="testAdd" value="删除" onclick="dellRow('t',this.parentNode.parentNode.rowIndex)"/>
 			</td>							
 		</tr>
-		<input type="heddin" jwcid="GainFenceField" />
 			  
       </table>
 		
