--- a/src/main/webapp/gainPoint/gainPointForm.html
+++ b/src/main/webapp/gainPoint/gainPointForm.html
@@ -4,7 +4,7 @@
 		name <a href=# onclick="addRow('t')">add</a><br/>
       <table id="t">
 		 
-		<tr jwcid="GainFenceField">
+		<tr jwcid="GainPointField">
 			<td>
 				id <input type="hidden" id="id" name ="id" value=""	/>
 			</td>
