--- a/src/main/webapp/mulitupload/AList.html
+++ b/src/main/webapp/mulitupload/AList.html
@@ -38,19 +38,8 @@
         </tr>
         <tr row="ognl:entity" jwcid="@contrib:TableRows" element="tr">
           <td>
-            <span jwcid="@Insert" value="ognl:entity.name">name</span>
+            <span jwcid="@Insert" value="ognl:entity.id">name</span>
           </td>
-          <td>
-            <span jwcid="@Insert" value="ognl:entity.password">password</span>
-          </td>
-          <td>
-            <span jwcid="@Insert" value="ognl:entity.colors">colors</span>
-          </td>
-		  <td>
-			<span jwcid="@If" condition="ognl:entity.id != null">
-				<a href="" jwcid="@ServiceLink" service="blob" parameters="ognl:{entity}">查看</a>
-			</span>
-		  </td>
           <td>
             <a parameters="ognl:entity" listener="listener:doEditEntityAction" jwcid="@DirectLink" href="AForm.html" id="editAction">
               <span key="link.edit">Edit</span>
@@ -65,5 +54,4 @@
       </table>
       <div jwcid="@contrib:TablePages" element="div"/>
     </div>
-	<a jwcid="@PageLink" page="one/DatePickerForm">Corner:DropdownDatePicker</a>
 </span>
